# tqwt_tools

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: dual_q_decomposition_demo.ipynb
tests/: test_tqwt.py  tqwt_tests.py
tests/resources/: w_sine.mat
tqwt_tools/: __init__.py
tqwt_tools/dualqdecomposition/: __init__.py  dualqdecomposition.py
tqwt_tools/tqwt/: __init__.py  check_params.py  itqwt.py  tqwt.py  wavelets.py
tqwt_tools/util/: __init__.py  other.py  test_signal.py
