[project]
name = "tqwt-tools"
version = "0.1.0"
description = "Computation of a Tunable-Q Wavelet Transform and a resonance-based signal decomposition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
    "sortedcontainers>=2.4",
    "typeguard>=4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'
